--- a/health/package.json
+++ b/health/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.12.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-horizontal-scrolling-menu": "^4.0.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
